--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About Us</a>
+            <a class="nav-link" href="/ApnaDukanBootstrap/about.html">About Us</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -59,7 +59,7 @@
           </li>
          
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Contact Us</a>
+            <a class="nav-link" href="/ApnaDukanBootstrap/contact.html">Contact Us</a>
           </li>
 
         </ul>
