--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="/">Home</a>
+            <a class="nav-link " aria-current="page" href="/ApnaDukanBootstrap/">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="/ApnaDukanBootstrap/about.html">About Us</a>
